[INJICERT-1149] fix(PreAuthorizedCodeService): handle UnsupportedEncodingException in buildCredentialOfferUri method
Signed-off-by: amaydixit11 <amaydixit11@gmail.com>